samples/_failures_safe/1761555376_66d264_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98a5f613.c: In function ‘main’:
./samples/SAFE/__tmp_98a5f613.c:149:9: error: expected declaration or statement at end of input
  149 |         mat2.rows > MAX_DIM || mat2.cols > MAX_DIM) {
      |         ^~~~
./samples/SAFE/__tmp_98a5f613.c:149:9: error: expected declaration or statement at end of input
